# excludr

./: .env.e2e  .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  PR_WEBSOCKET_SUMMARY.md  README.md  WEBSOCKET_IMPLEMENTATION_SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/agents/: backend-fastapi-dev.md  vue-frontend.md
.github/workflows/: e2e-tests.yml
app/: main.py
app/core/: api.py  celery.py  config.py  database.py  prefect_config.py
docker/celery_worker/: Dockerfile
docker/fastapi_app/: Dockerfile
docker/postgres/: init-databases.sh
docs/: IMPLEMENTATION_PLAN.md  POC_PLAN.md  csv-Parentspsy-set.csv  pubmed-Parentspsy-set.txt
frontend/: FEATURES.md  FILES_CREATED.md  QUICK_REFERENCE.md  README.md  SETUP.md  VUE_DEVTOOLS.md  WEBSOCKET_QUICKSTART.md  WEBSOCKET_README.md  index.html  install.sh  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.e2e.json  vite.config.ts
frontend/e2e/: articles.spec.ts  auth.spec.ts  criteria.spec.ts  fixtures.ts  full-workflow.spec.ts  projects.spec.ts  screening.spec.ts
frontend/src/: App.vue  main.ts
migrations/: env.py
migrations/versions/: 149dd77b3368_init.py  254cffdae2d1_add_users.py  60aa2496c42f_add_article.py  9bc80ee934e2_add_full_text_content_to_article.py  f589762b3834_add_criteria_screening_and_article_.py  fffe19c1f708_add_users_projects.py
tests/: conftest.py  test_alive.py
tests/docs/: test.ris  test_pubmed.csv  test_pubmed.txt
tests/e2e/: conftest.py  test_article_flow.py  test_auth_flow.py  test_criteria_flow.py  (+3 more)
(+80 files in other folders)
